--- a/index.html
+++ b/index.html
@@ -1,59 +1,113 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Unity Web Player | ASTM</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-logo-title-footer"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">ASTM</div>
-      </div>
-    </div>
-    <script>
-      var canvas = document.querySelector("#unity-canvas");
+    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
+    <link rel="stylesheet" href="TemplateData/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <style>
+      html, body { height:100%; margin:0; background:#000; overflow:hidden; }
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        var warningBanner = document.querySelector("#unity-warning");
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-        }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
+      /* Center stage with letterbox/pillarbox */
+      #stage {
+        position:fixed; inset:0; display:grid; place-items:center; background:#000;
+        padding: env(safe-area-inset-top) env(safe-area-inset-right)
+                 env(safe-area-inset-bottom) env(safe-area-inset-left);
       }
 
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/astm builds.loader.js";
-      var config = {
+      /* JS enforces exact 16:9 here */
+      #canvas-wrap { position:relative; width:960px; height:540px; }
+      #unity-canvas { width:100%; height:100%; display:block; outline:0; background:#000; }
+
+      /* Overlays pinned to canvas bounds */
+      #unity-warning, #unity-loading-bar, #unity-footer {
+        position:absolute; left:0; right:0; pointer-events:none;
+        font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      }
+      #unity-warning { top:8px; text-align:center; z-index:3; }
+      #unity-loading-bar { bottom:16px; display:flex; flex-direction:column; align-items:center; gap:8px; z-index:2; }
+      #unity-progress-bar-empty { width:60%; max-width:520px; height:10px; background:#333; }
+      #unity-progress-bar-full { width:0%; height:100%; background:#6cf; }
+      #unity-footer { bottom:0; text-align:center; color:#bbb; padding:6px 0; }
+
+      /* Fullscreen button */
+      #unity-fullscreen-button {
+        position:absolute; top:12px; right:12px; width:40px; height:40px;
+        pointer-events:auto; cursor:pointer; z-index:4;
+        background:rgba(255,255,255,0.08); border:1px solid rgba(255,255,255,0.2); border-radius:8px;
+        display:flex; align-items:center; justify-content:center;
+      }
+      #unity-fullscreen-button:after { content:"⤢"; color:#fff; font-size:20px; line-height:1; }
+
+      /* Ignore template desktop/mobile sizing */
+      .unity-desktop #unity-canvas, .unity-mobile #unity-canvas { width:100% !important; height:100% !important; }
+    </style>
+  </head>
+  <body>
+    <div id="stage">
+      <div id="canvas-wrap">
+        <canvas id="unity-canvas" tabindex="-1"></canvas>
+
+        <div id="unity-loading-bar">
+          <div id="unity-logo"></div>
+          <div id="unity-progress-bar-empty"><div id="unity-progress-bar-full"></div></div>
+        </div>
+
+        <div id="unity-warning"></div>
+
+        <div id="unity-footer">
+          <div id="unity-logo-title-footer"></div>
+          <div id="unity-build-title">ASTM</div>
+        </div>
+
+        <div id="unity-fullscreen-button" title="Fullscreen"></div>
+      </div>
+    </div>
+
+    <script>
+      const canvas = document.getElementById("unity-canvas");
+      const wrap = document.getElementById("canvas-wrap");
+
+      function unityShowBanner(msg, type) {
+        const banner = document.getElementById("unity-warning");
+        const div = document.createElement("div");
+        div.innerHTML = msg;
+        div.style = "display:inline-block; margin:2px 6px; padding:8px 12px; color:#000;";
+        if (type === "error") div.style.background = "red";
+        else {
+          if (type === "warning") div.style.background = "yellow";
+          setTimeout(() => { banner.removeChild(div); toggle(); }, 5000);
+        }
+        banner.appendChild(div);
+        toggle();
+        function toggle(){ banner.style.display = banner.children.length ? "block" : "none"; }
+      }
+
+      // Maintain strict 16:9 without cropping. Adds letterbox/pillarbox as needed.
+      function layout169() {
+        const ww = innerWidth, wh = innerHeight, a = 16/9;
+        let w, h;
+        if (ww / wh > a) { h = Math.floor(wh); w = Math.floor(h * a); }
+        else { w = Math.floor(ww); h = Math.floor(w / a); }
+        if (wrap._w === w && wrap._h === h) return;
+        wrap._w = w; wrap._h = h;
+        wrap.style.width = w + "px";
+        wrap.style.height = h + "px";
+      }
+      layout169();
+      addEventListener("resize", layout169);
+      addEventListener("orientationchange", layout169);
+      addEventListener("fullscreenchange", layout169);
+      (function watchDPR(){
+        let m = matchMedia(`(resolution: ${devicePixelRatio}dppx)`);
+        m.addEventListener("change", () => { layout169(); watchDPR(); }, { once:true });
+      })();
+
+      const buildUrl = "Build";
+      const loaderUrl = buildUrl + "/astm builds.loader.js";
+      const config = {
         arguments: [],
         dataUrl: buildUrl + "/astm builds.data.unityweb",
         frameworkUrl: buildUrl + "/astm builds.framework.js.unityweb",
@@ -63,65 +117,29 @@
         productName: "ASTM",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
+        matchWebGLToCanvasSize: true,
+        // devicePixelRatio: Math.min(window.devicePixelRatio || 1, 2),
       };
 
-      // By default, Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      // If you would like all file writes inside Unity Application.persistentDataPath
-      // directory to automatically persist so that the contents are remembered when
-      // the user revisits the site the next time, uncomment the following line:
-      // config.autoSyncPersistentDataPath = true;
-      // This autosyncing is currently not the default behavior to avoid regressing
-      // existing user projects that might rely on the earlier manual
-      // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
-      // expected to change.
-
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        document.querySelector("#unity-container").className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        document.documentElement.style.height = "100%";
+        document.body.style.height = "100%";
       }
 
-      document.querySelector("#unity-loading-bar").style.display = "block";
+      document.getElementById("unity-loading-bar").style.display = "block";
 
-      var script = document.createElement("script");
+      const script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
-          document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
-                document.querySelector("#unity-loading-bar").style.display = "none";
-                document.querySelector("#unity-fullscreen-button").onclick = () => {
-                  unityInstance.SetFullscreen(1);
-                };
-
-              }).catch((message) => {
-                alert(message);
-              });
-            };
-
+          document.getElementById("unity-progress-bar-full").style.width = (100 * progress) + "%";
+        }).then((unityInstance) => {
+          document.getElementById("unity-loading-bar").style.display = "none";
+          document.getElementById("unity-fullscreen-button").onclick = () => unityInstance.SetFullscreen(1);
+          layout169();
+        }).catch((message) => { alert(message); });
+      };
       document.body.appendChild(script);
-
     </script>
   </body>
 </html>
